--- a/careers.html
+++ b/careers.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>SUDC - Home</title>
+        <title>About company</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -69,8 +69,8 @@
                                     </div>
                                     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                                         <ul class="nav navbar-nav">
-                                            <li class="active"><a href="shops.html">Products & shops</a></li>
-                                            <li><a href="about_card.html">About SUDC card</a></li>
+                                            <li ><a href="shops.html">Products & shops</a></li>
+                                            <li class="active"><a href="about_card.html">About SUDC card</a></li>
                                             <li><a href="membership.html">Membership</a></li>
 
                                             <li class="dropdown">
@@ -280,7 +280,7 @@
 
 
         <!-- About the card -->
-        <section class="about_the_card testimonial no-padding">
+        <section class="about_the_card no-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
@@ -289,13 +289,13 @@
                             <div class="submenu">
                                 <ul class="nav nav-tabs">
                                     <li role="presentation"><a href="about_company.html">About company</a></li>
-                                    <li role="presentation" class="active"><a href="core_value.html">Core values</a></li>
+                                    <li role="presentation"><a href="core_value.html">Core values</a></li>
                                     <li role="presentation"><a href="news_events.html">News and Events</a></li>
-                                    <li role="presentation"><a href="careers.html">Careers</a></li>
+                                    <li role="presentation" class="active"><a href="careers.html">Careers</a></li>
                                     <li role="presentation"><a href="site_map.html">Site map</a></li>
                                 </ul>
                             </div>
-                            <h1 class="header_center">CORE VALUE</h1>
+                            <h1 class="header_center">CAREERS</h1>
                         </div>
                     </div>
                 </div>
@@ -303,7 +303,7 @@
         </section>
 
         <!-- About the card -->
-        <section class="customer_benifits">
+        <section class="about_company">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12 no-padding">
@@ -311,43 +311,9 @@
                             <p class="about_card_head">
                                 At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
                             </p>
-                            
-                            <p class="about_card_sub_head">
-                                Here are the 5 core values that we live by:
+                            <p class="about_card_description">
+                                Earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
                             </p>
-                            
-                            <ul class="customer_benifits_head">
-                                <li>
-                                    <p class="benifit_item">
-                                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="benifit_item">
-                                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt.
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="benifit_item">
-                                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia.
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="benifit_item">
-                                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="benifit_item">
-                                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt.
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="benifit_item">
-                                        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia.
-                                    </p>
-                                </li>
-                            </ul>
                         </div>
                     </div>
                 </div>
