--- a/news_events_details.html
+++ b/news_events_details.html
@@ -278,110 +278,52 @@
             </div>
         </section>
 
-
-        <!-- About the card -->
-        <section class="about_the_card testimonial no-padding">
+        <section class="news_detail_breadcrumb">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
-                        <div class="about_the_card_img">
-                            <img src="images/About%20us.jpg" class="img-responsive" />
-                            <div class="submenu">
-                                <ul class="nav nav-tabs">
-                                    <li role="presentation"><a href="about_company.html">About company</a></li>
-                                    <li role="presentation"><a href="core_value.html">Core values</a></li>
-                                    <li role="presentation" class="active"><a href="news_events.html">News & Events</a></li>
-                                    <li role="presentation"><a href="careers.html">Careers</a></li>
-                                    <li role="presentation"><a href="site_map.html">Site map</a></li>
-                                </ul>
-                            </div>
-                            <h1 class="header_center">NEWS & EVENTS</h1>
-                        </div>
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">News & Event details</li>
+                            </ol>
+                        </nav>
+
                     </div>
                 </div>
             </div>
         </section>
-
-        <!-- About the card -->
-        <section class="news_filter">
+        <section class="news_detail_pod">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-sm-12 col-xs-12">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                            <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fas fa-search"></i>
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-sm-12 col-xs-12">
-                        <div class="cust-selc">
-                            <span class="grey">Sort by: </span>
-                            <select class="custom-select custom-select-lg mb-3 no-border pull-right">
-                                <option selected="">SUDC sort</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                            </select>
-                        </div>
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img src="images/News&Events%20Banner%20Image-1.jpg" class="img-responsive" />                        
                     </div>
                 </div>
-            </div>
-        </section>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <p class="news_title">
+                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>           
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <p class="news_title_date_location">
+                            <span class="location"><i class="fas fa-map-marker-alt"></i>California, Lowa, United states</span>
+                            <span class="date"><i class="fas fa-calendar-alt"></i>Monday, September 5, 2019</span>
+                        </p>           
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <p class="news_title_details">
+                            Earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                        </p>
+                        <p class="news_title_details">
+                            Ttenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
 
-        <section class="news_pod">
-            <div class="container">
-                <div class="row news_pod_wrapper">
-
-                    <div class="col-md-3 col-sm-12 col-xs-12">
-                        <img src="images/News&%20Eventsd_1.jpg" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-9 col-sm-12 col-xs-12">
-                        <p class="about_card_head">
-                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-                        </p>
-                        <p class="news_date_time">March 01, 6.00pm-9.30pm - <span class="bold">Malaysia</span></p>
-                        <a href="news_events_details.html" class="newsReadMore">Read more</a>
-                        
-                    </div>
-
-                </div>
-                <div class="row news_pod_wrapper">
-                    <div class="col-md-3 col-sm-12 col-xs-12">
-                        <img src="images/News&%20Eventsd_2.jpg" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-9 col-sm-12 col-xs-12">
-                        <p class="about_card_head">
-                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-                        </p>
-                        <p class="news_date_time">March 01, 6.00pm-9.30pm - <span class="bold">Singapore</span></p>
-                        <a href="news_events_details.html" class="newsReadMore">Read more</a>
-                    </div>
-                </div>
-                <div class="row news_pod_wrapper">
-                    <div class="col-md-3 col-sm-12 col-xs-12">
-                        <img src="images/News&%20Eventsd_3.jpg" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-9 col-sm-12 col-xs-12">
-                        <p class="about_card_head">
-                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-                        </p>
-                        <p class="news_date_time">March 01, 6.00pm-9.30pm - <span class="bold">Kolkatta</span></p>
-                        <a href="news_events_details.html" class="newsReadMore">Read more</a>
-                    </div>
-                </div>
-                <div class="row news_pod_wrapper">
-                    <div class="col-md-3 col-sm-12 col-xs-12">
-                        <img src="images/News&%20Eventsd_4.jpg" class="img-responsive"/>
-                    </div>
-                    <div class="col-md-9 col-sm-12 col-xs-12">
-                        <p class="about_card_head">
-                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-                        </p>
-                        <p class="news_date_time">March 01, 6.00pm-9.30pm - <span class="bold">Berkley CA</span></p>
-                        <a href="news_events_details.html" class="newsReadMore">Read more</a>
+                            Ttenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                        </p> 
                     </div>
                 </div>
             </div>
