--- a/news_events_details.html
+++ b/news_events_details.html
@@ -391,7 +391,7 @@
 
                         <h4>Need help</h4>
                         <ul>
-                            <li class="active"><a href="index.html">FAQ</a></li>
+                            <li class="active"><a href="faq.html">FAQ</a></li>
                             <li><a href="contact_us.html">Contact us</a>
                             <li><a href="online_query.html">Online query</a></li>
                         </ul>
