--- a/news_events.html
+++ b/news_events.html
@@ -319,7 +319,7 @@
                     <div class="col-md-2 col-sm-12 col-xs-12">
                         <div class="cust-selc">
                             <span class="grey">Sort by: </span>
-                            <select class="custom-select custom-select-lg mb-3 no-border pull-right">
+                            <select class="custom-select custom-select-lg mb-3 no-border pull-right bold">
                                 <option selected="">SUDC sort</option>
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
