--- a/index.html
+++ b/index.html
@@ -105,26 +105,26 @@
                                                     <li><a href="product_detail.html">Product item</a></li>
                                                     <hr>
 
-                                                    <li class="active"><a href="about_card.html">About SUDC card</a></li>
+                                                    <li class=""><a href="about_card.html">About SUDC card</a></li>
                                                     <li><a href="how_it_works.html">How it works?</a>
                                                     <li><a href="membership.html">Memberships</a></li>
                                                     <li><a href="customerbenfits.html">Member's benifits</a></li>
                                                     <li><a href="testimonial.html">Member's testimonials</a></li>
 
                                                     <hr>
-                                                    <li class="active"><a href="about_company.html">About company</a></li>
+                                                    <li class=""><a href="about_company.html">About company</a></li>
                                                     <li><a href="core_value.html">Core values</a>
                                                     <li><a href="news_events.html">News and Events</a></li>
                                                     <li><a href="careers.html">Careers</a></li>
                                                     <li><a href="site_map.html">Site map</a></li>
 
                                                     <hr>
-                                                    <li class="active"><a href="privacy.html">Privacy policy</a></li>
+                                                    <li class=""><a href="privacy.html">Privacy policy</a></li>
                                                     <li><a href="terms_of_use.html">Terms of use</a>
                                                     <li><a href="terms_of_sale.html">Terms of sale</a></li>
 
                                                     <hr>
-                                                    <li class="active"><a href="faq.html">FAQ</a></li>
+                                                    <li class=""><a href="faq.html">FAQ</a></li>
                                                     <li><a href="contact_us.html">Contact us</a>
                                                     <li><a href="online_query.html">Online query</a></li>
                                                 </ul>
