--- a/product_lists.html
+++ b/product_lists.html
@@ -1048,7 +1048,7 @@
 
 
                             <div class="row text-center home_view_more">
-                                <a href="#" class="btn arima">view more <i class="icon-plus"></i></a>
+                                <a href="#" class="btn arima">view more+</a>
                             </div>  
 
 
