--- a/shops.html
+++ b/shops.html
@@ -408,7 +408,7 @@
                                         <li> <input type="checkbox" id="fruit17" name="fruit-1" value="Apple"><label for="fruit17">Shopping</label></li>
                                         <li> <input type="checkbox" id="fruit18" name="fruit-1" value="Apple"><label for="fruit18">Mobile Phone Repair</label></li>
                                         <li> <input type="checkbox" id="fruit19" name="fruit-1" value="Apple"><label for="fruit19"> Accessories</label></li>
-                                        <li class="vwmre"> <a href="">View more category</a></li>
+                                        <li class="vwmre"> <a href="">View more</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -467,7 +467,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am  Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -491,7 +491,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -515,7 +515,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -539,7 +539,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -565,7 +565,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -589,7 +589,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -613,7 +613,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -637,7 +637,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -661,7 +661,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -685,7 +685,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -721,7 +721,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -745,7 +745,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -769,7 +769,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
@@ -793,7 +793,7 @@
                                         <p><i class="icon-map-marker"></i>180-182 Regent Street, London, W1B 5BT | <a href="#">Get direction</a></p>
                                         <p><i class="icon-phone"></i>979147392 <i class="icon-link no-mar"></i>
                                             <a href="#">www.expeciastores.com</a></p>
-                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am Satatuday : 10am to 6pm Sunday: 10am to 6pm 
+                                        <p><i class="icon-time"></i>Monday - Friday : 6am to 10am   Sunday: 10am to 6pm 
                                         </p>
                                         <p class="cate"><span>Category: <strong>Mobile phone</strong> | <a href="#">10% Discount</a></span></p>
                                     </div>
