--- a/userprofile.html
+++ b/userprofile.html
@@ -235,7 +235,7 @@
         <section class="userprofile_section_page">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+                    <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
                         <div class="profile-section">
                             <h2 class="text-left">User profile</h2>
                             <form action="#" method="post" class="form">
