--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
                                 <ul class="list-group">
                                     <li class="radio width_50">
-                                        <label><input type="radio" class="" name="location" id="location" checked>Located</label>
+                                        <label><input type="radio" class="" name="location" id="location" checked>Located by miles</label>
                                     </li>
                                     <li class="width_50 miles">
                                         <select class="custom-select custom-select-xl grey"> 
@@ -337,21 +337,6 @@
                                             <option value="3">300</option>
                                             <option value="4">400</option>
                                             <option value="5">500</option>
-                                        </select>
-                                        <span>miles of</span>
-                                        <input type="text" class="" placeholder="600027" />
-                                    </li>
-                                </ul>
-                                <ul class="list-group">
-                                    <li class="radio width_50">
-                                        <label><input type="radio" class="" name="location" id="location">From preferred locations</label>
-                                    </li>
-                                    <li class="width_50">
-                                        <select class="custom-select custom-select-xl grey">
-                                            <option selected="india">India only</option>
-                                            <option value="uk">UK only</option>
-                                            <option value="usa">USA only</option>
-                                            <option value="canada">Canada only</option>
                                         </select>
                                     </li>
                                 </ul>
