--- a/index.html
+++ b/index.html
@@ -100,33 +100,57 @@
                                                     . . .  
                                                 </a>
                                                 <ul class="dropdown-menu dropdownhover-bottom" role="menu" id="othersubmenuhead">
-                                                    <li><a href="product_lists.html">Product list</a></li>
-                                                    <li><a  href="shop_detail.html">Shop details</a></li>
-                                                    <li><a href="product_detail.html">Product item</a></li>
-                                                    <hr>
 
-                                                    <li class=""><a href="about_card.html">About SUDC card</a></li>
-                                                    <li><a href="how_it_works.html">How it works?</a>
-                                                    <li><a href="membership.html">Memberships</a></li>
-                                                    <li><a href="customerbenfits.html">Member's benifits</a></li>
-                                                    <li><a href="testimonial.html">Member's testimonials</a></li>
+                                                    <li class="dropdown dropdown-submenu">
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Products</a>
 
-                                                    <hr>
-                                                    <li class=""><a href="about_company.html">About company</a></li>
-                                                    <li><a href="core_value.html">Core values</a>
-                                                    <li><a href="news_events.html">News and Events</a></li>
-                                                    <li><a href="careers.html">Careers</a></li>
-                                                    <li><a href="site_map.html">Site map</a></li>
+                                                        <ul class="dropdown-menu dropdownhover-bottom" role="menu">
+                                                            <li><a href="product_lists.html">Product list</a></li>
+                                                            <li><a  href="shop_detail.html">Shop details</a></li>
+                                                            <li><a href="product_detail.html">Product item</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li class="dropdown dropdown-submenu">
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">About SUDC card</a>
 
-                                                    <hr>
-                                                    <li class=""><a href="privacy.html">Privacy policy</a></li>
-                                                    <li><a href="terms_of_use.html">Terms of use</a>
-                                                    <li><a href="terms_of_sale.html">Terms of sale</a></li>
+                                                        <ul class="dropdown-menu dropdownhover-bottom" role="menu">
+                                                            <li class=""><a href="about_card.html">About SUDC card</a></li>
+                                                            <li><a href="how_it_works.html">How it works?</a>
+                                                            <li><a href="membership.html">Memberships</a></li>
+                                                            <li><a href="customerbenfits.html">Member's benifits</a></li>
+                                                            <li><a href="testimonial.html">Member's testimonials</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li class="dropdown dropdown-submenu">
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">About company</a>
 
-                                                    <hr>
-                                                    <li class=""><a href="faq.html">FAQ</a></li>
-                                                    <li><a href="contact_us.html">Contact us</a>
-                                                    <li><a href="online_query.html">Online query</a></li>
+                                                        <ul class="dropdown-menu dropdownhover-bottom" role="menu">
+                                                            <li class=""><a href="about_company.html">About company</a></li>
+                                                            <li><a href="core_value.html">Core values</a>
+                                                            <li><a href="news_events.html">News and Events</a></li>
+                                                            <li><a href="careers.html">Careers</a></li>
+                                                            <li><a href="site_map.html">Site map</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li class="dropdown dropdown-submenu">
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Policy Info</a>
+
+                                                        <ul class="dropdown-menu dropdownhover-bottom" role="menu">
+                                                            <li class=""><a href="privacy.html">Privacy policy</a></li>
+                                                            <li><a href="terms_of_use.html">Terms of use</a>
+                                                            <li><a href="terms_of_sale.html">Terms of sale</a></li>
+
+                                                        </ul>
+                                                    </li>
+                                                    <li class="dropdown dropdown-submenu">
+                                                        <a href="" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" role="button">Need help</a>
+
+                                                        <ul class="dropdown-menu dropdownhover-bottom" role="menu">
+                                                            <li class=""><a href="faq.html">FAQ</a></li>
+                                                            <li><a href="contact_us.html">Contact us</a>
+                                                            <li><a href="online_query.html">Online query</a></li>
+                                                        </ul>
+                                                    </li>
                                                 </ul>
                                             </li>
 
@@ -2029,5 +2053,6 @@
         }
 
         loadIpadImages();
+
     </script>
 </html>
