--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
                                     <li class="radio width_50">
                                         <label><input type="radio" class="" name="location" id="location" checked>Located in</label>
                                     </li>
-                                    <li class="width_50">
+                                    <li class="width_50 located">
                                         <select class="custom-select custom-select-xl grey">
-                                            <option selected="india">India</option>
+                                            <option selected="india">Republic of Indian democracy</option>
                                             <option value="uk">UK</option>
                                             <option value="usa">USA</option>
                                             <option value="canada">Canada</option>
