--- a/index.html
+++ b/index.html
@@ -1999,7 +1999,7 @@
                             <li><a href="merchant_benifits.html">Merchant's benifits</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-2 col-sm-offset-2 col-sm-4 footer_height">
+                    <div class="col-md-offset-0 col-md-2 col-sm-offset-2 col-sm-4 footer_height">
                         <h4>Poloicy info</h4>
                         <ul class="mb20">
                             <li class="active"><a href="privacy.html">Privacy policy</a></li>
